--- a/colorize.css
+++ b/colorize.css
@@ -56,6 +56,8 @@
     margin-bottom: 1em ;
     border: 1px solid #AAA ;
     width: 50% ;
+    border-bottom-left-radius: 1em ;
+    border-bottom-right-radius: 1em ;
 }
 
 .link {
