--- a/colorize.css
+++ b/colorize.css
@@ -55,7 +55,7 @@
     /* border: 1px solid black ; */
     margin-bottom: 0.6em ;
     border: 1px solid #AAA ;
-    width: 50% ;
+    max-width: 50% ;
     border-bottom-left-radius: 1em ;
     border-bottom-right-radius: 1em ;
     padding-left: 0.5em ;
@@ -64,12 +64,17 @@
 
 .help .Parsed { background: #FFF }
 
+.help > DIV { display: inline }
+
 .link {
     position: absolute ;
     border: 0px ;
+    max-width: 100% ;
     background: black ;
     border-left: 1px solid #AAA ;
     border-right: 1px solid #AAA ;
+    padding-left: 0px ;
+    padding-right: 0px ;
 }
 
 .Redirection, .Fildes, .Direction {
