--- a/colorize.css
+++ b/colorize.css
@@ -14,6 +14,7 @@
     padding: 0px ;
     font-weight: bold ;
     border: 0px ;
+    margin-bottom: 0.5em ;
 }
 
 #sheexp_input, #sheexp_output , #sheexp_help {
