--- a/colorize.css
+++ b/colorize.css
@@ -46,7 +46,8 @@
     padding-right: 0.5em ;
     padding-top: 1px ;
     padding-bottom: 2px ;
-    font-family: Arial;
+    font-family: Arial ;
+    position: relative ;
 }
 
 .help > DIV {
